Replaced the CSS animations with CoffeeScript, since there was an overlap bug on new data arrival.

--- a/widgets/fitbit/fitbit.sass
+++ b/widgets/fitbit/fitbit.sass
@@ -57,49 +57,6 @@ $background-color: #15aaaa
       margin: 0
       padding: 0
       width: 100%
-      height: 100%
-      opacity: 0
-      -webkit-backface-visibility: hidden
-      -webkit-animation: slideshow 36s linear infinite 0s
-      -moz-animation: slideshow 36s linear infinite 0s
-      -o-animation: slideshow 36s linear infinite 0s
-      -ms-animation: slideshow 36s linear infinite 0s
-      animation: slideshow 36s linear infinite 0s
-
-      &:nth-child(2)
-        -webkit-animation-delay: 6s
-        -moz-animation-delay: 6s
-        -o-animation-delay: 6s
-        -ms-animation-delay: 6s
-        animation-delay: 6s
-
-      &:nth-child(3)
-        -webkit-animation-delay: 12s
-        -moz-animation-delay: 12s
-        -o-animation-delay: 12s
-        -ms-animation-delay: 12s
-        animation-delay: 12s
-
-      &:nth-child(4)
-        -webkit-animation-delay: 18s
-        -moz-animation-delay: 18s
-        -o-animation-delay: 18s
-        -ms-animation-delay: 18s
-        animation-delay: 18s
-
-      &:nth-child(5)
-        -webkit-animation-delay: 24s
-        -moz-animation-delay: 24s
-        -o-animation-delay: 24s
-        -ms-animation-delay: 24s
-        animation-delay: 24s
-
-      &:nth-child(6)
-        -webkit-animation-delay: 30s
-        -moz-animation-delay: 30s
-        -o-animation-delay: 30s
-        -ms-animation-delay: 30s
-        animation-delay: 30s
 
   p
     &.updated-at
@@ -146,95 +103,3 @@ $background-color: #15aaaa
 
         &.battery-high, &.battery-full
           background-position: left -80px
-
-
-/* Animation for the slideshow images */
-@-webkit-keyframes slideshow
-  0%
-    opacity: 0
-    -webkit-animation-timing-function: ease-in
-
-  8%
-    opacity: 1
-    -webkit-animation-timing-function: ease-out
-
-  17%
-    opacity: 1
-
-  25%
-    opacity: 0
-
-  100%
-    opacity: 0
-
-@-moz-keyframes slideshow
-  0%
-    opacity: 0
-    -moz-animation-timing-function: ease-in
-
-  8%
-    opacity: 1
-    -moz-animation-timing-function: ease-out
-
-  17%
-    opacity: 1
-
-  25%
-    opacity: 0
-
-  100%
-    opacity: 0
-
-@-o-keyframes slideshow
-  0%
-    opacity: 0
-    -o-animation-timing-function: ease-in
-
-  8%
-    opacity: 1
-    -o-animation-timing-function: ease-out
-
-  17%
-    opacity: 1
-
-  25%
-    opacity: 0
-
-  100%
-    opacity: 0
-
-@-ms-keyframes slideshow
-  0%
-    opacity: 0
-    -ms-animation-timing-function: ease-in
-
-  8%
-    opacity: 1
-    -ms-animation-timing-function: ease-out
-
-  17%
-    opacity: 1
-
-  25%
-    opacity: 0
-
-  100%
-    opacity: 0
-
-@keyframes slideshow
-  0%
-    opacity: 0
-    animation-timing-function: ease-in
-
-  8%
-    opacity: 1
-    animation-timing-function: ease-out
-
-  17%
-    opacity: 1
-
-  25%
-    opacity: 0
-
-  100%
-    opacity: 0
